--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <ol>
             {{range $index, $item := .Items}}
                 <li>
-                    <b><a  target=_blank href="https://hh.ru/vacancy/{{ .ID }}">{{ .Name }}</a></b> ({{ .Employer.Name }}/{{ .Area.Name }}) <b>{{ .NormalizedSalary }}</b>
+                    <b><a  target=_blank href="https://hh.ru/vacancy/{{ .ID }}">{{ .Name }}</a></b> ("{{ .Employer.Name }}", {{ .Area.Name }}) <b>{{ .NormalizedSalary }}</b> [ {{ slice .PublishedAt 0 10 }} ]
                     <details>
                     <summary style="background-color: rgb(233, 227, 227);">{{ .Details.Excerpt }}</summary>
                     <p><div style="background-color: rgb(206, 206, 108);">{{ .Details.Description }}</div></p>
