--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!-- 
+
+cr = /[аАбБвВгГдДеЕёЁжЖзЗиИйЙкКлЛмМнНоОпПрРсСтТуУфФхХцЦчЧшШщЩъЪыЫьЬэЭюЮяЯ]+/; document.getElementsByName('vacancy').forEach((el) => { let d = el.querySelector('[name="description"]'); let cyr = cr.test(d.textContent); if (cyr) { el.style.display="none" } })
+
+-->
 <html>
     <head>
         <meta charset="UTF-8">
